# ai-mailbox

./: .gitignore
ai-mailbox/: .gitignore  README.md
ai-mailbox/apps/api/: alembic.ini
ai-mailbox/apps/api/ai_mailbox_api.egg-info/: SOURCES.txt
ai-mailbox/apps/api/alembic/: env.py
ai-mailbox/apps/api/app/: deps.py
ai-mailbox/apps/api/app/core/: config.py  logging.py
ai-mailbox/apps/api/app/db/models/: __init__.py  calendar_event.py  classification.py  user.py
ai-mailbox/apps/api/app/db/schemas/: mailbox.py
ai-mailbox/apps/api/app/routes/: analytics.py  auth_google_dev.py
ai-mailbox/apps/api/app/utils/: retry.py
ai-mailbox/apps/api/app/workers/: celery_app.py
ai-mailbox/deploy/: Dockerfile.api  env.example
apps/api/: pyproject.toml
apps/api/ai_mailbox_api.egg-info/: PKG-INFO  requires.txt
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_init_schema.py
apps/api/app/: main.py
apps/api/app/core/: security.py
apps/api/app/db/: __init__.py  base.py
apps/api/app/db/models/: action_log.py  embedding.py  message.py  provider.py  receipt.py  thread.py
apps/api/app/db/schemas/: actions.py  analytics.py  mail.py  user.py
apps/api/app/routes/: auth.py  mailbox.py
apps/api/app/services/actions/: unsubscribe.py
apps/api/app/services/ingest/: normalizer.py
apps/api/app/services/nlp/: drafter.py
apps/api/app/utils/: rate_limit.py  validators.py
apps/api/app/workers/: tasks_actions.py  tasks_ingest.py  tasks_nlp.py
deploy/: docker-compose.yml
scripts/: export_receipts_csv.py  seed_demo_data.py
(+7 files in other folders)
